--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "deploy": "node deploy/deploy.js",
     "remixd": "remixd -s /workdir --remix-ide https://remix.ethereum.org",
     "e2e-tests:local": "./e2e-tests/run-tests.sh local",
-    "e2e-tests:public": "./e2e-tests/run-tests.sh"
+    "e2e-tests:public": "./e2e-tests/run-tests.sh",
+    "test:gasreport": "GASREPORT=true npm run test"
   },
   "dependencies": {
     "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
@@ -42,6 +43,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eth-gas-reporter": "^0.2.25",
     "ethereumjs-util": "5.2.0",
     "ganache-cli": "^6.12.1",
     "prettier": "^2.2.0",
