feat: token factory not depend on token image & opposite bridge

--- a/e2e-tests/docker-compose.yml
+++ b/e2e-tests/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3.8'
 services:
   home:
     image: trufflesuite/ganache-cli
-    command: --deterministic --chainId 1337 --blockTime 1 --gasLimit 10000000
+    command: --deterministic --networkId 1337 --chainId 1337 --blockTime 1 --gasLimit 10000000
   foreign:
     image: trufflesuite/ganache-cli
-    command: --deterministic --chainId 1338 --blockTime 1 --gasLimit 10000000
+    command: --deterministic --networkId 1338 --chainId 1338 --blockTime 1 --gasLimit 10000000
   deploy-amb:
     image: poanetwork/tokenbridge-contracts
     env_file: local-envs/deploy-amb.env
